2007-12-11  Alan Modra  <amodra@bigpond.net.au>

	* config/tc-m32r.c (md_begin): Mark .sbss as being bss style section.

2007-12-10  Richard Sandiford  <rsandifo@nildram.co.uk>

	* config/tc-mips.h (mips_nop_opcode): Declare.
	(NOP_OPCODE): Define.
	(mips_segment_info): New structure.
	(TC_SEGMENT_INFO_TYPE): Use it instead of insn_label_list.
	* config/tc-mips.c (label_list): Adjust for new TC_SEGMENT_INFO_TYPE.
	(mips_record_mips16_mode): New function.
	(install_insn): Call it.
	(mips_align): Likewise.  Turn the fill argument into an "int *".
	Use frag_align_code for code segments if no fill data is given.
	(s_align): Adjust call accordingly.
	(mips_nop_opcode): New function.
	(mips_handle_align): Use the first variable byte to decide which
	nop sequence is needed.  Use md_number_to_chars and mips16_nop_insn.

2007-12-07  Bob Wilson  <bob.wilson@acm.org>
	
	* config/tc-xtensa.c (O_pcrel): Define.
	(suffix_relocs): Add pcrel suffix.
	(md_pseudo_table): Add 4byte and 2byte directives.
	(xtensa_elf_cons): Pass correct pcrel argument to fix_new_exp.
	(xg_assemble_literal): Likewise.  Check for O_pcrel.
	(expression_maybe_register): Reorganize.  Handle BFD_RELOC_32_PCREL.
	(xg_valid_literal_expression): Allow O_pcrel.
	(md_pcrel_from, md_apply_fix): Handle BFD_RELOC_32_PCREL.
	(tc_gen_reloc): Fix punctuation in error message.
	
2007-12-06  Bob Wilson  <bob.wilson@acm.org>

	* config/tc-xtensa.c (xg_force_frag_space): Delete.
	(xg_finish_frag, xg_assemble_literal_space): Replace calls to it.
	(xtensa_create_property_segments, xtensa_create_xproperty_segments):
	Set output_section for new property sections.  Use subseg_set and
	seg_info instead of retrieve_segment_info.  Adjust arguments to
	add_xt_block_frags and add_xt_prop_frags.  Use standard functions
	to create frags and fix records.
	(retrieve_segment_info): Delete.
	(add_xt_block_frags, add_xt_prop_frags): Replace calls to
	retrieve_segment_info.  Remove unused xt_block_sec arguments.
